added signup functionality

--- a/src/ui/src/components/login/login.html
+++ b/src/ui/src/components/login/login.html
@@ -1,6 +1,6 @@
 <div class="col-sm-4 col-sm-offset-4">
   <h2>Log In</h2>
-  <p>Log in to your account to get some great quotes.</p>
+  <p>Log in to your account.</p>
   <div class="alert alert-danger" v-if="error">
     <p>{{ error }}</p>
   </div>
