--- a/src/ui/src/components/signup/signup.html
+++ b/src/ui/src/components/signup/signup.html
@@ -1,14 +1,46 @@
 <div class="col-sm-4 col-sm-offset-4">
   <h2>Sign Up</h2>
-  <p>Sign up for a free account to get some great quotes.</p>
+  <p>Sign up for an account.</p>
   <div class="alert alert-danger" v-if="error">
     <p>{{ error }}</p>
   </div>
+
   <div class="form-group">
-    <input type="text" class="form-control" placeholder="Enter your username" v-model="credentials.username">
+    <input type="text" class="form-control" placeholder="Enter your display name"
+      v-model="signup.displayName"
+      v-bind:class="{ 'alert-success' : signup.displayNameValidated }"
+      v-on:blur="validateDisplayName"
+      >
   </div>
+
   <div class="form-group">
-    <input type="password" class="form-control" placeholder="Enter your password" v-model="credentials.password">
+    <input type="text" id="signupEmail" class="form-control" placeholder="Enter your user name"
+    v-model="signup.userName"
+    v-bind:class="{ 'alert-success' : signup.userNameValidated }" 
+    v-on:blur="validateUsername"
+    v-bind:disabled="!signup.displayNameValidated"
+    >
   </div>
-  <button class="btn btn-primary" @click="submit()">Access</button>
+
+  <div class="form-group">
+    <input type="password" class="form-control" placeholder="Enter your password"
+    v-model="signup.password"
+    v-bind:class="{ 'alert-success' : signup.passwordValidated }"
+    v-on:blur="validatePassword"
+    v-bind:disabled="!signup.userNameValidated"
+    >
+  </div>
+
+  <div class="form-group">
+    <input type="password" class="form-control" placeholder="Confirm your password"
+    v-model="signup.confirmPassword"
+    v-bind:class="{ 'alert-success' : signup.confirmPasswordValidated }"
+    v-bind:disabled="!signup.passwordValidated"
+    v-on:blur="confirmPassword"
+    >
+  </div>
+
+  <button class="btn btn-primary"
+    v-bind:disabled="!formValidated"
+    @click="submit()">Submit</button>
 </div>
