--- a/src/ui/src/components/login/login.html
+++ b/src/ui/src/components/login/login.html
@@ -1,23 +1,20 @@
 <div class="col-sm-4 col-sm-offset-4">
-  <h2>Log In</h2>
-  <p>Log in to your account.</p>
+  <h2>{{$t('login.title')}}</h2>
+  <p>{{$t('login.instruction')}}</p>
   <div class="alert alert-danger" v-if="error">
-    <p>{{ error }}</p>
+    <p>{{error}}</p>
   </div>
   <div class="form-group">
     <p>
-      <input name="email" type="text" 
-        placeholder="Enter your email" v-model.trim="username"
-        :class="{'form-control': true}">
-      <span class="alert-danger" v-if="!$v.username.required">Username is required.</span>
-      <span class="alert-danger" v-if="!$v.username.email">Must be a valid email address</span>
+      <input name="email" type="text" :placeholder="$t('login.placeholder.email')" v-model.trim="username" :class="{'form-control': true}">
+      <span class="alert-danger" v-if="!$v.username.required">{{$t('validation.required')}}</span>
+      <span class="alert-danger" v-if="!$v.username.email">{{$t('validation.email')}}</span>
     </p>
   </div>
   <div class="form-group">
-    <input type="password" class="form-control" placeholder="Enter your password"
-      v-model.trim="password">
-      <span class="alert-danger" v-if="!$v.password.required">Password is required.</span>
-      <span class="alert-danger" v-if="!$v.password.minLength">Password must be at least 4 characters long</span>
+    <input type="password" class="form-control" :placeholder="$t('login.placeholder.password')" v-model.trim="password">
+    <span class="alert-danger" v-if="!$v.password.required">{{$t('validation.required')}}</span>
+    <span class="alert-danger" v-if="!$v.password.minLength">{{$t('validation.minLength', 4)}}</span>
   </div>
-  <button class="btn btn-primary" @click="submit()">Access</button>
+  <button class="btn btn-primary" @click="submit()">{{$t('login.button.submit')}}</button>
 </div>
