--- a/src/ui/src/components/navigation/_navigation.scss
+++ b/src/ui/src/components/navigation/_navigation.scss
@@ -1,3 +1,15 @@
 nav .dropdown-toggle.lang::after {
   content: none;
 }
+
+nav .nav-link.show-search-input{
+  color: $navbar-dark-color;
+  padding: 0.5em 0.5em;
+  @media (max-width: 768px)  {
+    margin-left: -0.5em;
+  }
+}
+
+nav .nav-link.show-search-input:hover{
+  color: $navbar-dark-hover-color
+}
