added support for multiple layouts/areas

--- a/src/ui/src/components/NotFound/notfound.html
+++ b/src/ui/src/components/NotFound/notfound.html
@@ -1,4 +1,4 @@
-<div>
+<main class="container-fluid">
     <h1 class="mb-2">{{$t('notfound.title')}}</h1>
     <p v-html="$t('notfound.instruction')"></p>
-</div>
+</main>
