--- a/src/ui/src/components/login/login.html
+++ b/src/ui/src/components/login/login.html
@@ -1,27 +1,28 @@
-<div class="col-sm-5 col-sm-offset-3">
-  <h2>{{$t('login.title')}}</h2>
-  <p>{{$t('login.instruction')}}</p>
-  
-  <div class="form-group">
-    <p>
-      <input name="email" type="text" :placeholder="$t('login.placeholder.email')" v-model.trim="username" :class="{'form-control': true}">
-      <span v-show="$v.username.$error">
+<main class="container-fluid">
+  <div class="col-sm-5 col-sm-offset-3">
+    <h2>{{$t('login.title')}}</h2>
+    <p>{{$t('login.instruction')}}</p>
+    <div class="form-group">
+      <p>
+        <input name="email" type="text" :placeholder="$t('login.placeholder.email')" v-model.trim="username" :class="{'form-control': true}">
+        <span v-show="$v.username.$error">
         <span class="alert-danger" v-if="!$v.username.required">{{$t('validation.required')}}</span>
         <span class="alert-danger" v-if="!$v.username.email">{{$t('validation.email')}}</span>
-      </span>
-    </p>
-  </div>
-  <div class="form-group">
-    <input type="password" class="form-control" :placeholder="$t('login.placeholder.password')" v-model.trim="password">
-    <span v-show="$v.password.$error">
+        </span>
+      </p>
+    </div>
+    <div class="form-group">
+      <input type="password" class="form-control" :placeholder="$t('login.placeholder.password')" v-model.trim="password">
+      <span v-show="$v.password.$error">
       <span class="alert-danger" v-if="!$v.password.required">{{$t('validation.required')}}</span>
       <span class="alert-danger" v-if="!$v.password.minLength">{{$t('validation.minLength', 4)}}</span>
-    </span>
-  </div>
-  <div class="form-group">
-    <button class="btn btn-primary" @click="submit()">{{$t('login.button.submit')}}</button>
-    <span class="alert-danger" v-show="errorKey">
+      </span>
+    </div>
+    <div class="form-group">
+      <button class="btn btn-primary" @click="submit()">{{$t('login.button.submit')}}</button>
+      <span class="alert-danger" v-show="errorKey">
       {{error}}
     </span>
+    </div>
   </div>
-</div>
+</main>
