added support for external authentication providers

--- a/src/ui/src/admin/admin.scss
+++ b/src/ui/src/admin/admin.scss
@@ -9,7 +9,7 @@
 @import "../styles/components";
 
 // Area specific
-@import "./styles/global";
+@import "./styles/area";
 @import "./footer/footer";
 
 /*
