--- a/src/ui/src/root/root.scss
+++ b/src/ui/src/root/root.scss
@@ -9,7 +9,7 @@
 @import "../styles/components";
 
 // Area specific
-@import "./styles/global";
+@import "./styles/area";
 @import "./footer/footer";
 
 /*
