--- a/src/ui/src/root/layout/layout.html
+++ b/src/ui/src/root/layout/layout.html
@@ -1,4 +1,5 @@
 <div class="container-fluid">
+  <status-bar :clear-after="5" locale-prefix="dict"></status-bar>
   <area-sidebar></area-sidebar>
   <router-view></router-view>
 </div>
