--- a/src/ui/src/styles/_global.scss
+++ b/src/ui/src/styles/_global.scss
@@ -45,3 +45,11 @@ body {
 .card-title {
     text-transform: capitalize;
 }
+
+.table td, .table th {
+  border-top: 0px;
+}
+
+.table thead tr th {
+  border-bottom: 0px;
+}
