restyled ui layout, menu and colours

--- a/src/ui/src/admin/footer/footer.scss
+++ b/src/ui/src/admin/footer/footer.scss
@@ -1,9 +1,5 @@
 footer {
   color: $navbar-dark-color;
-
-  nav {
-    padding-top: 0.5em;
-    padding-bottom: 0.5em;
-  }
-  
+  text-align: center;
+  padding: 0.5em 0.5em;  
 }
