--- a/src/ui/src/admin/layout/layout.html
+++ b/src/ui/src/admin/layout/layout.html
@@ -1,5 +1,9 @@
-<div class="container-fluid">
-  <status-bar :clear-after="5" locale-prefix="dict"></status-bar>
-  <area-sidebar></area-sidebar>
-  <router-view></router-view>
+<div class="container">
+  <div>
+    <status-bar :clear-after="5" locale-prefix="dict"></status-bar>
+  </div>
+  <div class="row">
+    <area-sidebar></area-sidebar>
+    <router-view></router-view>
+  </div>
 </div>
