--- a/src/ui/src/components/login/login.html
+++ b/src/ui/src/components/login/login.html
@@ -1,4 +1,4 @@
-<main class="container-fluid">
+<main class="container">
   <div class="row">
     <div class="col-sm-12">
       <status-bar :clear-after="5" :locale-prefix="'validation.login'"></status-bar>
