--- a/src/ui/src/components/verify/verify.html
+++ b/src/ui/src/components/verify/verify.html
@@ -1,4 +1,4 @@
-<main class="container-fluid">
+<main class="container">
     <h3 class="mb-2">{{$t('verify.title')}}</h3>
 
     <div class="form-group" v-show="!verifyCodeIssued">
