--- a/src/ui/src/components/forbidden/forbidden.html
+++ b/src/ui/src/components/forbidden/forbidden.html
@@ -1,4 +1,4 @@
-<main class="container-fluid">
+<main class="container">
     <h1 class="mb-2">{{$t('forbidden.title')}}</h1>
     <p v-html="$t('forbidden.content')"></p>
 </main>
