--- a/src/ui/src/components/search/search.html
+++ b/src/ui/src/components/search/search.html
@@ -1,4 +1,4 @@
-<main class="container-fluid">
+<main class="container">
   <h1 class="mb-2">{{$t('search.title', [searchText])}}</h1>
   <div v-html="$t('dict.notImplemented')"></div>
 </main>
