--- a/src/ui/src/styles/_variables.scss
+++ b/src/ui/src/styles/_variables.scss
@@ -33,10 +33,6 @@
 
 $fa-font-path: "//netdna.bootstrapcdn.com/font-awesome/4.7.0/fonts" !default;
 
-// globally available
-$vue-green: #41b883;
-$vue-green-dark: #309669;
-
 // Colors
 //
 // Grayscale and brand colors for use across Bootstrap.
@@ -48,10 +44,10 @@ $gray-lighter:              #eceeef !default;
 $gray-lightest:             #f7f7f9 !default;
 
 $brand-primary:             #2d4b65 !default;
-$brand-success:             #194c79 !default;
-$brand-info:                #5bc0de !default;
-$brand-warning:             #ea8e4f !default;
-$brand-danger:              #d9534f !default;
+$brand-success:             #5a6594 !default;
+$brand-info:                #5a869c!default;
+$brand-warning:             #ef9229 !default;
+$brand-danger:              #ce2031 !default;
 $brand-inverse:             $brand-primary !default;
 
 // Options
