--- a/src/ui/app/root/styles/_area.scss
+++ b/src/ui/app/root/styles/_area.scss
@@ -19,6 +19,7 @@ nav .nav-item.nav-search > a{
 }
 
 nav .nav-item.nav-search > input.form-control{
+  font-size: 0.75em;
   display:inline-block;
   width: auto;
 }
