--- a/src/ui/app/styles/_variables.scss
+++ b/src/ui/app/styles/_variables.scss
@@ -43,9 +43,9 @@ $gray-light:                #818a91 !default;
 $gray-lighter:              #eceeef !default;
 $gray-lightest:             #f7f7f9 !default;
 
-$brand-primary:             #2d4b65 !default;
+$brand-primary:             #61456a !default;
 $brand-success:             #5a6594 !default;
-$brand-info:                #5a869c!default;
+$brand-info:                #e3e3e1 !default;
 $brand-warning:             #ef9229 !default;
 $brand-danger:              #ce2031 !default;
 $brand-inverse:             $brand-primary !default;
@@ -156,11 +156,11 @@ $grid-gutter-widths: (
 // Typography
 //
 // Font, line-height, and color for body text, headings, and more.
-
 $font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !default;
 $font-family-serif:      Georgia, "Times New Roman", Times, serif !default;
 $font-family-monospace:  Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
 $font-family-base:       $font-family-sans-serif !default;
+$font-family-fancy:      "Architects Daughter";
 
 // Pixel value used to responsively scale all typography. Applied to the `<html>` element.
 $font-size-root: 16px !default;
