tweak status bar

--- a/src/ui/app/components/forbidden/forbidden.html
+++ b/src/ui/app/components/forbidden/forbidden.html
@@ -1,4 +1,4 @@
-<main class="col">
+<main class="row">
     <h1 class="mb-2">{{$t('forbidden.title')}}</h1>
     <p v-html="$t('forbidden.content')"></p>
 </main>
