--- a/src/ui/app/components/login/login.html
+++ b/src/ui/app/components/login/login.html
@@ -1,6 +1,8 @@
-<main class="col">
+<main>
   <div class="row">
     <status-bar :clear-after="5" :locale-prefix="'validation.login'"></status-bar>
+  </div>
+  <div class="row">
     <div class="col-sm-6 login-provider">
       <div class="card">
         <div class="card-body">
