--- a/src/ui/app/root/layout/layout.html
+++ b/src/ui/app/root/layout/layout.html
@@ -1,5 +1,9 @@
-<div class="row">
-  <status-bar :clear-after="5" locale-prefix="dict"></status-bar>
-  <area-sidebar></area-sidebar>
-  <router-view></router-view>
+<div>
+  <div class="row">
+    <status-bar :clear-after="5" locale-prefix="dict"></status-bar>
+  </div>
+  <div class="row">
+    <area-sidebar></area-sidebar>
+    <router-view></router-view>
+  </div>
 </div>
